# CompSim1

./: .gitignore  CMakeLists.txt  README.md
doc/: doc.aux  doc.bbl  doc.blg  doc.out  doc.tex  doc.toc  ref.bib
doc/figs/: angleCorrected.tif  angleNotCorrected.tif  backRedhift.tif  frontRedhift.tif  outRedhift.tif  sideRedhift.tif  test.tif
python/: frames.py  frames.txt  images.py  orbit.txt  planet.txt
src/: ImageRenderer.cpp  ImageRenderer.hpp  Math.cpp  Math.hpp  Schwarzschild.cpp  Schwarzschild.hpp  Solver.cpp  Solver.hpp  Spacetime.cpp  Spacetime.hpp  Utils.hpp  frames.txt  main.cpp
